<resources>
    <string name="app_name">LoveApp</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="calculate">Calculate</string>
    <string name="you">You</string>
    <string name="try_again">Try again</string>
    <string name="your_score">Your Score</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="get_started">Get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_luck">Good luck!</string>
    <string name="history">History</string>
</resources>