<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.calculate.LoveResultFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@drawable/border_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_loveCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_love2" />

        <TextView
            android:id="@+id/tv_firstName_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/you"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="Akylai" />

        <ImageView
            android:id="@+id/img_heart"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_heart1" />

        <TextView
            android:id="@+id/tv_secondName_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/you"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="Aktan" />

        <TextView
            android:id="@+id/tv_totalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/your_score" />

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/img_heartPercentage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_heart2" />

            <TextView
                android:id="@+id/tv_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="100%" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:paddingHorizontal="60dp"
            android:text="@string/try_again"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>